# asnumpy

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml
asnumpy/: __init__.py  array.py  cann.py  io.py  logic.py  math.py  nn.py  sorting.py  statistics.py  utils.py
asnumpy/lib/: __init__.py  __init__.pyi
asnumpy/linalg/: __init__.py  _linalg.py  direct.py
asnumpy/random/: __init__.py  _random.py
asnumpy/testing/: __init__.py  _array.py  _assertions.py  _bundle.py  _helper.py  _loops.py  _parameterized.py  _pytest_impl.py
docs/array/array_creation/: todo.md
docs/array/attributes_and_methods/: todo.md
docs/array/concatenation_and_split/: todo.md
docs/array/indexing_and_copy/: todo.md
docs/array/shape_and_manipulation/: todo.md
docs/fft/frequency_helpers/: todo.md
docs/fft/real_transforms/: todo.md
docs/fft/transforms/: todo.md
docs/linalg/decompositions/: todo.md
docs/linalg/matrix_and_vector_products/: todo.md
docs/linalg/matrix_eigenvalues/: todo.md
docs/linalg/norms_and_other_numbers/: todo.md
docs/linalg/solving_equations_and_inverting_matrices/: todo.md
docs/logic/: supported.md
docs/logic/array_contents/: todo.md
docs/logic/array_type_testing/: todo.md
docs/logic/comparison/: todo.md
docs/math/arithmetic_operations/: supported.md  todo.md
docs/math/exponents_and_logarithms/: supported.md
docs/math/extreme_value_search/: todo.md
docs/math/floating_point_routines/: supported.md  todo.md
docs/math/handling_complex_numbers/: supported.md  todo.md
docs/math/hyperbolic_functions/: supported.md  todo.md
docs/math/miscellaneous/: supported.md  todo.md
docs/math/other_special_functions/: supported.md  todo.md
docs/math/rational_routines/: supported.md
docs/math/rounding/: supported.md
docs/math/sums_products_differences/: supported.md  todo.md
docs/math/trigonometric_functions/: supported.md  todo.md
docs/polynomia/basic_polynomials/: todo.md
docs/polynomia/evaluation/: todo.md
docs/polynomia/fitting/: todo.md
docs/polynomia/interpolation/: todo.md
docs/random/: supported.md
docs/random/continuous_distributions/: todo.md
docs/random/discrete_distributions/: todo.md
docs/random/generators/: todo.md
docs/random/sampling/: todo.md
docs/sorting/: supported.md
docs/statistics/averages/: todo.md
docs/statistics/correlations/: todo.md
docs/statistics/counting functions/: todo.md
docs/statistics/nan_handling/: todo.md
docs/statistics/order_stats/: todo.md
include/asnumpy/array/: basic.hpp
include/asnumpy/math/: arithmetic_operations.hpp  extrema_finding.hpp  floating_point_routines.hpp  trigonometric_functions.hpp
include/asnumpy/nn/: activation.hpp  nn.hpp
include/asnumpy/statistics/: averages_and_variances.hpp  statistics.hpp
python/: CMakeLists.txt  asnumpy.cpp  bind_array.cpp  bind_math.cpp  bind_nn.cpp  bind_statistics.cpp
src/: CMakeLists.txt
src/array/: basic.cpp
src/math/: CMakeLists.txt  arithmetic_operations.cpp  extrema_finding.cpp  floating_point_routines.cpp  miscellaneous.cpp  trigonometric_functions.cpp
src/nn/: CMakeLists.txt  activation.cpp
src/statistics/: CMakeLists.txt  averages_and_variances.cpp
test/: allpass_test_script.py  random_test_script.py  script_test_cases.py  test_script.py
test/test_nn/: test_softmax.py
test/test_statistics/: test_mean.py
tests/: conftest.py
tests/asnumpy_tests/creation_tests/: test_basic.py  test_creation.py
tests/asnumpy_tests/logic_tests/: test_logic.py
tests/asnumpy_tests/math_tests/: test_arithmetic.py  test_exponents_and_logarithms.py  test_floating_point_routines.py  test_handling_complex_numbers.py  test_hyperbolic.py  test_miscellaneous.py  test_other_special_functions.py  test_rational_routines.py  test_rounding.py  test_sums_products_differences.py  test_trigonometric.py
